сделал стрелки для галереи

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
       <h2>Gallery</h2>
       <div class="gallery__content">
         <div class="gallery__card">
+          <a href="#carousel__slide2" class="carousel carousel__prev">⬅</a>
           <div class="card-panel">
             <img src="./assets/gallery1.webp" alt="Image 1" class="responsive-img">
             <div class="overlay white-text gallery__card__content">
@@ -111,6 +112,7 @@
         </div>
 
         <div class="gallery__card">
+          <a href="#carousel__slide2" class="carousel carousel__next">➡</a>
           <div class="card-panel">
             <img src="./assets/gallery4.png" alt="Image 4" class="responsive-img">
             <div class="overlay white-text gallery__card__content">
