add menu navigation

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div class="nav-wrapper">
       <div class="nav-links">
         <a href="#"><b>TOUR-GUIDE</b></a>
-        <a href="#" class="right">Stories</a>
-        <a href="#" class="right">Gallery</a>
-        <a href="#" class="right">Features</a>
-        <a href="#" class="right">Write to us</a>
+        <a href="#stories" class="right">Stories</a>
+        <a href="#gallery" class="right">Gallery</a>
+        <a href="#features" class="right">Features</a>
+        <a href="#write_to_us" class="right">Write to us</a>
       </div>
 
       <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -37,7 +37,7 @@
   </nav>
 
   <main class="main_container">
-    <section class="stories">
+    <section id="stories" class="stories">
       <div class="story__content">
         <div class="story">
           <h3>Let's hit the road</h3>
@@ -74,7 +74,7 @@
       </div>
       <hr class="divider">
     </section>
-    <section class="gallery">
+    <section id="gallery" class="gallery">
       <h2>Gallery</h2>
       <div class="gallery__content">
         <div class="gallery__card">
@@ -124,7 +124,7 @@
         </div>
       </div>
     </section>
-    <section class="features">
+    <section id="features" class="features">
       <h2>Features</h2>
       <div class="features__content">
         <div class="feature">
@@ -164,7 +164,7 @@
         </div>
       </div>
     </section>
-    <section class="write_to_us">
+    <section id="write_to_us" class="write_to_us">
       <h2>Write to us</h2>
       <form class="write_to_us_form">
         <div class="write_to_us_form__contacts">
