fix display footer divider and add padding

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         </div>
       </form>
     </section>
-    <hr class="divider">
+    <hr class="divider show-important">
   </main>
 
   <footer>
